--- a/webui/package.json
+++ b/webui/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.0",
     "turbo": "^1.13.3"
   },
   "packageManager": "pnpm@9.0.6",
@@ -24,7 +24,8 @@
     "node": ">=18"
   },
   "dependencies": {
-    "next": "14.1.3"
+    "next": "14.1.3",
+    "node-polyfill-webpack-plugin": "^4.0.0"
   },
   "eidolon": {
     "last-update-hash": "a0156e551d550f70d3fa94b081d6872ef167d18f"
