--- a/webui/apps/eidolon-ui2/package.json
+++ b/webui/apps/eidolon-ui2/package.json
@@ -51,12 +51,11 @@
     "@mui/material": "latest",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/faker": "^6.6.9",
     "@types/qs": "^6.9.15",
     "clsx": "latest",
     "copy-to-clipboard": "latest",
     "next": "14.2.3",
-    "next-auth": "beta",
+    "next-auth": "5.0.0-beta.17",
     "qs": "^6.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
