--- a/webui/package.json
+++ b/webui/package.json
@@ -24,8 +24,7 @@
     "node": ">=18"
   },
   "dependencies": {
-    "next": "14.1.3",
-    "node-polyfill-webpack-plugin": "^4.0.0"
+    "next": "14.1.3"
   },
   "eidolon": {
     "last-update-hash": "a0156e551d550f70d3fa94b081d6872ef167d18f"
